bdr.BDR.scala.error
Erreur de compilation :
BDR:26: error: not found: value recume
    recume()
    ^